[gd_scene load_steps=4 format=3 uid="uid://c6sr7ms7xo1xd"]

[ext_resource type="Script" path="res://Source/Player/player.gd" id="1_umyqu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tfocl"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_63ljq"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_umyqu")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tfocl")

[node name="Neck_Controller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head_Controller" type="Node3D" parent="Neck_Controller"]

[node name="Camera" type="Camera3D" parent="Neck_Controller/Head_Controller"]
cull_mask = 1

[node name="Dash_Impulse_Position" type="Marker3D" parent="Neck_Controller/Head_Controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="PlaceHolder_Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 2
mesh = SubResource("CapsuleMesh_63ljq")

[node name="Stair_Ahead_Check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, -1)
target_position = Vector3(0, -0.55, 0)

[node name="Stair_Below_Check" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.75, 0)

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
